fix: chapter merge own jobs implementation (#697)
* fix: implement chapter merging jobs as own jobs implementation, not Polarion jobs

Refs #669

* chore: code review fixes

* chore: code review fixes

* chore: code review fixes

* chore: code review fixes

* chore: code review fixes
